--- a/styles.css
+++ b/styles.css
@@ -1,27 +1,44 @@
 * {
     margin: 0;
-}
-
-header {
-    padding: 20px;
-    display: block;
-    background-color: #000000;
-    font-family: 'Roboto', sans-serif;
+    scroll-behavior: smooth;
 }
 
 body {
     margin: 0px;
-    background-color: #a0a0a0;
-    color: #242424;
     font-family: 'Roboto', sans-serif;
     background-image: url(./imagens/1231556.png);
     backdrop-filter: blur(3px);
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-position:-9px ;
+    background-position: -9px;
+    scroll-behavior: smooth;
 }
 
-.navbar {
+header {
+    position: fixed;
+    padding: 20px;
+    display: block;
+    background-color: rgba(255, 255, 255, 0.9);
+    font-family: 'Roboto', sans-serif;
+}
+
+.navigation {
+    position: sticky;
+    width: 100%;
+    right: 0;
+    top: 0;
+    bottom: auto;
+    /* z-index: 1; */
+    display: flex;
+    padding-right: 30px;
+    padding-left: 30px;
+    justify-content: center;
+    align-items: center;
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+
+.nav-bar {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -40,6 +57,19 @@ body {
     padding-block: none;
 }
 
+.botao {
+    text-decoration: none;
+    text-align: center;
+    justify-content: space-evenly;
+}
+
+.sobre {
+    display: flex;
+    padding: 30px 30px 120px;
+    justify-content: center;
+    align-items: center;
+}
+
 .container-prod {
     padding: 1rem;
 }
@@ -51,38 +81,37 @@ body {
 }
 
 .card {
-    background: #262525;
+    background: #303030;
     padding: 1.5rem;
     overflow: hidden;
     border-radius: 0.8rem;
+    height: 30rem;
 }
 
 .titulo-produto-gde {
     font-family: fantasy, sans-serif;
-    font-size: 10rem;
+    font-size: 4rem;
     letter-spacing: 0.5rem;
     color: #1d1d1d;
-    transform: translatex(10rem);
+    transform: translatex(1.7rem);
     transition: transform 2.5s;
+    text-align: end;
 }
 
 .titulo-produto-peq {
+    margin-top: 5rem;
     margin-bottom: 1rem;
 }
 
 .descricao {
-    font-size: 1.4rem;
+    font-size: 1.5rem;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     line-height: 1.5;
 }
 
-.card:hover .card1 {
-    background-color: #262525;
-}
-
 .card:hover .titulo-produto-gde {
-    transform: translateX(-115%);
-    color: fff;
+    transform: translateX(-170%);
+    color: #000000;
 }
 
 .card.produto1:hover {
@@ -95,17 +124,19 @@ body {
 
 .card.produto2:hover {
     background-color: #7CB342;
-    background-image: url("./imagens/xboxlogo.png");
-    background-position: center;
+    background-image: url("./imagens/xbox.png");
+    background-position:center;
     background-repeat: no-repeat;
+    background-size: 65%;
 }
 
 .card.produto3:hover {
     background-color: #FF3D00;
-    background-image: url("./imagens/Nintendo-Switch-Logo.png");
-    background-size: 47rem;
+    /* background: linear-gradient(to left, #5c90f1 , #ff3d00 ); */
+    background-image: url("./imagens/nitendo.png");
     background-position: center;
     background-repeat: no-repeat;
+    background-size: 65%;
 
 }
 
@@ -115,44 +146,11 @@ body {
     align-items: center;
 }
 
-
-.navigation {
-    position: static;
-    left: 0;
-    top: 0;
-    right: 0;
-    bottom: auto;
-    z-index: 1;
-    display: flex;
-    padding-right: 30px;
-    padding-left: 30px;
-    justify-content: center;
-    align-items: center;
-    background-color: #b3b3b3;
-    padding-top: 15px;
-    padding-bottom: 15px;
-}
-
-.sobre {
-    display: flex;
-    padding: 30px 30px 120px;
+table {
     justify-content: center;
     align-items: center;
 }
 
-.tabela .titulo {
-    font-size: 20px;
-
-}
-
-th {
-    display: table-cell;
-    font-weight: bold;
-    border-collapse: separate;
-}
-td{
-    border-collapse: separate;
-}
 .tabela {
     width: calc(100%);
     border-radius: 5px;
@@ -164,22 +162,45 @@ td{
     background-color: rgba(255, 255, 255, 0.9);
 }
 
-table,
-td,
+.tabela .titulo {
+
+    border-radius: 5px;
+    font-size: 20px;
+    font-weight: bold;
+}
+
 th {
+    display: table-cell;
+    font-weight: bold;
+    border-radius: 5px;
+    border-collapse: separate;
+    background-color: #7CB342;
+    color: #003087;
+}
+
+tbody {
+    border-collapse: separate;
+    border: 1px solid;
+}
+
+table,
+td {
     border: 1px solid;
     border-collapse: collapse;
-    width: 100rem;
+    width: 10rem;
     align-content: center;
     align-items: center;
     text-align: center;
     border-collapse: separate;
+    border-radius: 5px;
 
 }
 
-tfoot{
+tfoot {
     border-spacing: .1rem;
     border-radius: 5px;
+    background-color: #7CB342;
+    color: #003087;
 }
 
 
